
syntax = "proto3";

package proto;


message PBHeroEntity
{
	int64 hero_id  = 1;
	int32 conf_id  = 2;
	int32 level = 3;
	int32 break_level = 4;
	int32 exp = 5;
	repeated int32 awake_info = 6;
	int32 awake_level = 7;
	int32 tianming_level = 8;
	map<int32,int32> attributes = 9;
}